template.vpc.routing.yaml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Description: >
  Open Search Stack

Parameters:
  stage:
    Description: "Stage"
    Type: String
  backupRegion:
    Description: "Backup Region"
    Type: String
  vpcId:
    Description: "VPC ID"
    Type: String
  privateSubnet1:
    Description: "Private Subnet 1"
    Type: String
  publicSubnet1:
    Description: "Public Subnet 1"
    Type: String

Resources:

  PrivateSubnetNATRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref vpcId

  PrivateSubnet1NATRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref privateSubnet1
      RouteTableId: !Ref PrivateSubnetNATRouteTable

  PublicSubnetIGWRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref vpcId

  PublicSubnet1IGWRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref publicSubnet1
      RouteTableId: !Ref PublicSubnetIGWRouteTable

  EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt EIP.AllocationId
      SubnetId: !Ref publicSubnet1

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref vpcId
      InternetGatewayId: !Ref InternetGateway

  IGWPublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicSubnetIGWRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  NATPublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateSubnetNATRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway


#
#  FlowLogRole:
#    Type: "AWS::IAM::Role"
#    Properties:
#      AssumeRolePolicyDocument:
#        Version: "2012-10-17"
#        Statement:
#          - Effect: "Allow"
#            Principal:
#              Service: "vpc-flow-logs.amazonaws.com"
#            Action: "sts:AssumeRole"
#      Policies:
#        - PolicyName: "AllowCloudWatchLogs"
#          PolicyDocument:
#            Version: "2012-10-17"
#            Statement:
#              - Effect: "Allow"
#                Action:
#                  - "logs:CreateLogGroup"
#                  - "logs:CreateLogStream"
#                  - "logs:PutLogEvents"
#                Resource: "arn:aws:logs:*:*:*"
#
#  FlowLog:
#    Type: "AWS::EC2::FlowLog"
#    Properties:
#      DeliverLogsPermissionArn: !GetAtt FlowLogRole.Arn
#      ResourceId: !Ref vpcId
#      ResourceType: "VPC"
#      TrafficType: "ALL"
#      LogGroupName: !Ref VPCFlowLogGroup

  VPCFlowLogGroup:
    Type: "AWS::Logs::LogGroup"
    Properties:
      RetentionInDays: 365
